--- a/EasyRefuel/template/app/src/main/res/values/strings.xml
+++ b/EasyRefuel/template/app/src/main/res/values/strings.xml
@@ -46,7 +46,9 @@
     <!-- ricerca-->
     <string name="search_hint">Cerca luoghi</string>
     <string name="action_search">Ricerca</string>
-    <string name="title_activity_privacy">PrivacyActivity</string>
+    <string name="title_activity_privacy">Privacy Policy</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_info">Crediti</string>
+
 
 </resources>
